--- a/src/style/common.scss
+++ b/src/style/common.scss
@@ -11,3 +11,16 @@ body{
   width: 982px;
   margin: 0 auto;
 }
+
+.f-thide{
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+.f-thide-3{
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+}
